test/elaboration/bad/coreml_unit.mle
let (u : unit) = (42 : unit)